crates/keron-lang/tests/corpus/errors/check/duplicate_val.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `name` is already defined
  --> 3:5
  |
3 | val name = "other"
  |     ^^^^
